# baby-co-work

./: .gitignore  功能板块设计交接清单.md
app/: .env.example  .gitignore  Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.server.json  vite.config.ts
app/Doubao-Seed-2.0-lite-260428/: README.md  pyproject.toml
app/Doubao-Seed-2.0-lite-260428/ark_audio_transcriber/: __init__.py  core.py
app/api/: index.ts
app/audio transcript/: README.md
app/audio transcript/ark_audio_transcriber/: cli.py
app/scripts/: export-mobile-ui-screens.mjs  smoke-ark.ts
app/server/: app.ts  config.ts  index.ts  prompts.ts
app/server/middleware/: session.ts
app/server/repositories/: json-family-repository.ts  types.ts
app/server/routes/: analyze.ts  attachments.ts  auth.ts  contributions.ts  families.ts  tasks.ts  voice.ts
app/server/services/: ark-client.ts  audio-transcriber.ts  contribution.ts  knowledge-base.ts  model-json.ts  pin.ts  safety.ts  session-store.ts  task-assignment.ts  task-events.ts  task-model.ts  task-orchestrator.ts
app/src/: main.tsx
app/src/api/: client.ts
app/src/app/: App.tsx
app/src/components/: VoiceRecorder.tsx
app/src/data/: preset-analysis.json
app/src/domain/: adjustment.ts  rules.ts  schemas.ts  task-events.ts  types.ts
app/src/pages/: ContributionPage.tsx  CreatePage.tsx  FamilyPage.tsx  TodayPage.tsx
app/supabase/: README.md
design/: tokens.json  个人视觉设计风格规范.md  海报提示词.md  海报要求.txt
doc/: 新生儿家庭协作台_PRD_v1.0.md  新生儿家庭协作台_PRD_v1.1.md  新生儿家庭协作台_Supabase设计_v1.0.md  新生儿家庭协作台_实施计划_v1.0.md  新生儿家庭协作台_实施计划_v1.1.md
(+17 files in other folders)
