[project]
name = "ark-audio-transcriber"
version = "0.1.0"
description = "Minimal local media audio transcription tool for Ark multimodal models."
requires-python = ">=3.10"
dependencies = []

[project.scripts]
ark-audio-transcribe = "ark_audio_transcriber.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
